SAP_V3ToProd/objects/Wholesaler_Role__c.object
<CustomObject>
    <description>Used to look up the Role ID by the Wholesaler Number and Wholesaler Type</description>
    <fields>
        <fullName>Live_Date__c</fullName>
        <description>Date wholesaler went live with app</description>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_ID_WSLR__c</fullName>
        <description>Salesforce Role ID used for lookup</description>
        <label>Role ID WSLR</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role_Name_WSLR__c</fullName>
        <description>Role name for Role ID Lookup</description>
        <label>Role Name WSLR</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <description>Time zone of each wholesaler</description>
        <label>Time Zone</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_Role_Status__c</fullName>
        <description>Used to flag a role as active or inactive for Role ID lookup</description>
        <label>WSLR Role Status</label>
        <picklist>
            <picklistValues>
                <fullName>FALSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Name__c</fullName>
        <description>Name of Wholesaler in Role ID Lookup</description>
        <label>Wholesaler Name</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Number__c</fullName>
        <description>Wholesaler Number used for Role ID Lookup.</description>
        <label>Wholesaler Number</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Wholesaler Role</label>
    <nameField>
        <label>Wholesaler Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesaler Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>